# personal-prompts

./: .gitignore  README.md  RULES_COMBINER_CLI_SPECIFICATION.md  main.py  pyproject.toml  rules-combiner  rules-combiner.bat  v2_rules-workflow-generator.md
commands/: analyze-pr.md  code.md  create-spec-front-end.md  create-spec.md  e2e-test.md  fix-pr-feedback.md  init-code-context.md  init-quality-standard.md  intergration-test.md  plan.md  split-spec.md  test.md
generators/: rules-workflow-generator.md  v2_rules-workflow-generator.md
rules/: agent-best-pratice.md  data-storytelling.md  docs-guideline.md  git-commit.md  how-to-docs.md  incode-context-engineering.md  problem-solver.md  production-code.md  production-testing.md  prompt-engineer.md  python-coding.md  python-test.md  system-achitecture.md  tool-design-for-agent.md  type-script.md  ui-ux.md
src/rules_combiner/: __init__.py  cli.py  discovery.py  models.py  output.py  processor.py  selector.py
tests/: __init__.py
tests/integration/: __init__.py  test_e2e.py
tests/unit/: test_discovery.py  test_models.py  test_output.py  test_processor.py  test_selector_simple.py
workflows/: analyze-pr.md  create-prd.md  document.md  git-commit-push.md  init-code-context.md  read-plan.md  resolve-bug.md  resolve-error.md  split-plan.md  write.md
